[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Imgs/floating_islands/island1_tiles.png" type="Texture" id=1]
[ext_resource path="res://Nodes/OtherIslands/OtherIslands.gd" type="Script" id=2]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 0, 32, 64, 0, 128, 32, 64, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 0, 32, 64, 0, 128, 32, 64, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="TileSet" id=4]
1/name = "hover_white"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "forest"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, -64 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "mine"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, -64 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 256, 128, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "tile"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/navigation = SubResource( 2 )
4/shapes = [  ]
4/z_index = 0
5/name = "tile_nonav"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 128, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/navigation = SubResource( 3 )
5/shapes = [  ]
5/z_index = 0
6/name = "hover_selected"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 128, 128, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "building"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, -64 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 256, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [  ]
7/z_index = 0
8/name = "farm"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, -64 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 384, 0, 128, 128 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [  ]
8/z_index = 0
9/name = "house"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, -64 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 384, 128, 128, 128 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [  ]
9/z_index = 0
10/name = "flag"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, -64 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 384, 256, 128, 128 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shapes = [  ]
10/z_index = 0

[node name="Island2" type="Node2D"]
visible = false
position = Vector2( 1056, -352 )
z_index = 1
script = ExtResource( 2 )

[node name="Maps" type="YSort" parent="."]

[node name="IslandMap" type="Navigation2D" parent="Maps"]

[node name="Map" type="TileMap" parent="Maps/IslandMap"]
z_index = -1
mode = 1
tile_set = SubResource( 4 )
cell_size = Vector2( 128, 64 )
centered_textures = true
format = 1
tile_data = PoolIntArray( 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 131072, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0 )

[node name="Hovering" type="TileMap" parent="Maps"]
mode = 1
tile_set = SubResource( 4 )
cell_size = Vector2( 128, 64 )
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 131074, 1, 0, 196609, 1, 0, 196610, 1, 0 )

[node name="IslandCells" type="TileMap" parent="Maps"]
mode = 1
tile_set = SubResource( 4 )
cell_size = Vector2( 128, 64 )
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 131074, 1, 0, 196609, 1, 0, 196610, 1, 0 )

[node name="IslandStructures" type="TileMap" parent="Maps"]
mode = 1
tile_set = SubResource( 4 )
cell_size = Vector2( 128, 64 )
cell_tile_origin = 1
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( 0, 2, 0, 4, 2, 0, 131074, 2, 0, 196609, 8, 0, 262148, 2, 0 )

[node name="IslandStructuresPreview" type="TileMap" parent="Maps"]
modulate = Color( 1, 1, 1, 0.470588 )
mode = 1
tile_set = SubResource( 4 )
cell_size = Vector2( 128, 64 )
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 131074, 1, 0, 196609, 1, 0, 196610, 1, 0 )
